SimGrid (3.4.1-svn) unstable; urgency=low

 SimDag
 * Warn the user about loop dependencies in data flow of DAX files

 Java Bindings
 * Fix a bug preventing the tasks from begin garbage collected.

 -- Da SimGrid team <simgrid-devel@lists.gforge.inria.fr>

SimGrid (3.4) stable; urgency=low

 The "Easter in Cargese" release. Also known as (major changes):
 
  * the "se habla Java, Ruby 話せます, fala-se Lua (and deaf-friendly)"
    ~> bindings were greatly improved
    ~> new tracing infrastructure for better visualization introduced
    
  * the "Welcome to configury modernity" release.
    ~> we switched from autotools to cmake, and improved our cdash


 A more detailled list of changes follow (full detail in svn log).

 Java Bindings: Various Cleanups
  * (install java-gcj-compat-dev on debian-like to use them)
  * Remove put/get: no need to export deprecated interface in Java
    Use send/receive instead.
  * Cleanup the examples and add a README per directory
  * Remove example autoDestination (that's the only way to go now)
  * Remove example explicitDestination (was a plain copy of basic)  
  * Make JniException a runtime exception, so that there is no need to
    declare the fact that you may encounter such a beast. I guess that
    nobody will ever want to survive such error.
  * Create specific errors for each MSG case of failure:
    host failure, transfer failure, timeout, task cancelled
  * Cleanup the exceptions that may get thrown by each function
  * Other internal cleanups in Java bindings. Performance still bad :/
 Ruby and Lua Bindings: create them
  * (install ruby1.8-dev/liblua5.1-0-dev on debian-like to use them)
  * That's new and great, you should try them out. 
    Same functionalities than Java bindings, only even less polished
 SimDag:
  * Kill the useless "rate" argument of SD_task_get_execution_time()
    Everyone used to provide -1 as a value, it was not used, and the
    semantic of a possible use wasn't even clear.